Avoid vertically overlapping mark background

--- a/app/grandchallenge/core/static/css/base.scss
+++ b/app/grandchallenge/core/static/css/base.scss
@@ -76,8 +76,7 @@ div.codehilite {
 }
 
 mark, .mark {
-    padding-left: 0;
-    padding-right: 0;
+    padding: 0;
 }
 
 a.mark {
